register and login

--- a/Project/.env
+++ b/Project/.env
@@ -1,3 +1,4 @@
 MONGODB_URL = mongodb+srv://anhducnh:nhad1702@cluster0.nxsf6yt.mongodb.net/Project
 PORT = 3001
-JWT_SECRETKEY = nhad1702
+JWT_SECRET_KEY = nhad1702
+JWT_EXPIRATION_TIME = 3600000
