--- a/Project/.env
+++ b/Project/.env
@@ -2,3 +2,9 @@ MONGODB_URL = mongodb+srv://anhducnh:nhad1702@cluster0.nxsf6yt.mongodb.net/Proje
 PORT = 3001
 JWT_SECRET_KEY = nhad1702
 JWT_EXPIRATION_TIME = 3600000
+EMAIL_USER = anhducnhsg@gmail.com
+EMAIL_PASS = yafo ybzk xwfx cqhq
+CLIENT_URL = http://localhost:5173
+CLOUD_NAME = dh9nuso9m
+CLOUD_API_KEY = 675645719192435
+CLOUD_API_SECRET = Rcft1MctzeYMFU6yUtybhugO0h4
